# Sip

./: Cargo.toml  readme.md
src/: arg_parser.rs  http_parser.rs  main.rs  utils.rs
src/http/: brew.rs  headers.rs  methods.rs  mod.rs  request.rs  response.rs  status.rs
